@@ -2,6 +2,7 @@ Release Notes
 
 * 10/6/2015
   * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
+  * fixed lackOfJobs
 
 * 10/2/2015
   * fixed JG to reset destinationDBlock when the site doesn't have endpoint for ddd:	
